# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yml
.sqlx/: query-ce95e5de5b6e023eaa2cebe1c9451fa96376e14e0e20342324a2f38f032fab62.json
scripts/: init_db.sh
src/: configuration.rs  health_check.rs  lib.rs  main.rs  startup.rs  subscriptions.rs
tests/: health_check.rs
